# football-matome

./: .env  .env.travis  .env.vagrant  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
client/: .babelrc  .envrc  .eslintrc.js  .zshrc_mine  Makefile  package.json  webpack.config.js
client/src/: index.js  index.jsx  reducer.js
client/src/actions/: index.js  index.jsx  index.spec.js  index.spec.jsx
client/src/components/: App.jsx  Feeds.js  Feeds.jsx  Feeds.spec.js  Feeds.spec.jsx  MainAppBar.js
client/src/containers/: App.js  App.jsx
client/src/reducers/: index.jsx  index.spec.js  index.spec.jsx
client/test/: mocha.opts
etc/supervisord/: router.ini  scheduler.ini
migrations/20170407030311_create_feeds/: up.sql
public/: index.html
src/: app.rs  lib.rs  models.rs
src/config/: config.rs  config.toml
src/controllers/: feed_controller.rs  mod.rs
src/libraries/: mod.rs
src/libraries/rss_retriever/: feed.rs  retriever.rs
src/models/: connection.rs  feed.rs  mod.rs
src/services/: feed_service.rs  mod.rs  rss_service.rs
tests/: lib.rs
tests/integration/: get_feed.rs  mod.rs  support.rs
tests/models/: feed.rs  mod.rs
tests/stabs/: config.toml  matome.rdf
