[package]
name = "football-matome"
version = "0.1.0"
authors = ["Tomy <kazu9su@gmail.com>"]

[dependencies]
hyper = "*"
hyper-native-tls = "*"
xml-rs = "*"
diesel = { version = "0.11.0", features = ["chrono"] }
diesel_codegen = { version = "0.11.0", features = ["mysql"] }
dotenv = "0.8.0"
nickel = "*"
rustc-serialize = "*"
chrono = "*"
lazy_static = "*"
clippy = {version = "*", optional = true}
mockito = "*"

[features]
default = []
